--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,8 @@
 
   <!-- time and date picker test -->
 
+  <!-- google map -->
+  <script src="http://maps.google.com/maps/api/js?sensor=false&amp;libraries=geometry"></script>
 </head>
 
 <body ng-app="starter">
