折價券的debug, 修改資料, push 相關檔案, 通知修改, 事件顯示解決中

--- a/www/index.html
+++ b/www/index.html
@@ -7,9 +7,11 @@
   <title></title>
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <!--<script type="text/javascript" charset="utf-8" src="js/PushNotification.js"></script>-->
   <link href="lib/ion-md-input/css/ion-md-input.min.css" rel="stylesheet">
   <link href="lib/ionic-material/dist/ionic.material.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=RobotoDraft%3A400%2C500%2C700%2C400italic" rel="stylesheet" type="text/css">
+
   <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -23,6 +25,7 @@
   <!-- your app's js -->
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
+  <!--<script src="js/services/RequestsService.js"></script>-->
   <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAxMgWM5Mgpqew6bfB4zG_MyqZKbQtw9w4&amp;sensor=true"></script>
   <script src="http://example.gajotres.net/include/angular-google-maps/angular-google-maps.min.js"></script>
