--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,7 @@
 
   <!-- google map -->
   <script src="http://maps.google.com/maps/api/js?sensor=false&amp;libraries=geometry"></script>
+  <script type="text/javascript" src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerclusterer/src/markerclusterer.js"></script>
 </head>
 
 <body ng-app="starter">
