--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,8 @@
   <!-- your app's js -->
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
+  <script src="js/services_user.js"></script>
+
   <!--<script src="js/services/RequestsService.js"></script>-->
   <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAxMgWM5Mgpqew6bfB4zG_MyqZKbQtw9w4&amp;sensor=true"></script>
